[package]
name = "khanza-klaim-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.5", features = [
  "runtime-tokio",
  "tls-native-tls",
  "chrono",
  "mysql",
] }
chrono = { version = "0.4.40", features = ["serde", "now"] }

tokio = { version = "1.44.1", features = [
  "process",
  "rt",
  "macros",
  "rt-multi-thread",
  "signal",
  "fs",
] }
tokio-util = { version = "0.7.15", features = [] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = [] }
serde_bytes = { version = "0.11.17", features = [] }

anyhow = { version = "1.0.97", features = [] }
thiserror = { version = "2.0.12", features = [] }

dotenvy = { version = "0.15.7", features = [] }
dotenvy_macro = { version = "0.15.7", features = [] }

tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }

maud = { version = "0.27.0" }

image = { version = "0.25.6", features = [] }
qrcode = { version = "0.14.1", features = [] }
base64 = { version = "0.22.1" }

num-format = { version = "0.4.4" }
format_num = { version = "0.1.0" }

url = { version = "2.5.4", features = [] }

tempfile = { version = "3.19.1", features = [] }

fantoccini = { version = "0.21.5", features = [] }
webdriver = { version = "0.50.0" }

clap = { version = "4.5.37", features = ["derive", "env"] }
inquire = { version = "0.7.5", features = ["date"] }
futures = "0.3.31"
derive_more = { version = "2.0.1", features = ["display"] }
rolling-file = "0.2.0"
